<resources>

    <string name="app_name">Outsmart</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">上海市科技创新项目@SHIEP</string>
    <string name="title_activity_main">Outsmart</string>
    <string name="Copyright">Copyright © 2012–2013 FengXiang &amp; LinFeng.</string>
    <!--  -->
    <string name="new_reminder">New Reminder</string>
    <string name="show_last_SMS">Show Last SMS</string>
    <string name="show_last_SMS_summary">Select last SMS to make an quick alarm</string>
    <string name="show_SMS">Show SMS</string>
    <string name="show_SMS_summary">Select a SMS to make an new alarm</string>
    <string name="edit_SMS">New custom alarm</string>
    <string name="edit_SMS_summary">Write down the information to make an new alarm</string>
    <!--  -->
    <string name="settings">Settings</string>
    <string name="choose_calendar">Select calendar</string>
    <string name="choose_calendar_summary">Select Calendar settings location</string>
    <string name="add_location">Add a Location </string>
    <string name="add_location_summary">Custom locations to help Identification</string>
    <string name="delete_location">Delete Location</string>
    <string name="delete_location_summary">Delete Location Data</string>
    <!--  -->
    <string name="backup">Backup</string>
    <string name="backup_summary">Backup location data</string>
    <string name="restore">Restore</string>
    <string name="restore_summary">Restore Location Data</string>

</resources>